<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/textView"
            android:text="@string/welcome"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:textSize="22sp" />

        <Button
            android:id="@+id/register"
            android:text="@string/register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <Button
            android:id="@+id/login"
            android:text="@string/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

    </LinearLayout>


</RelativeLayout>