<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/back_toolbar"
        android:id="@+id/include"/>
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/include">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_gravity="fill_horizontal">

        <ImageView
            android:id="@+id/ivResidencePhotos"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            app:srcCompat="@android:drawable/ic_menu_camera"
            android:scaleType="centerCrop"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <ImageButton
            android:id="@+id/ivHostPic"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/profile_circular_border_imageview"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_profile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp" />
        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivResidencePhotos"
            android:background="@color/airbnb"
            android:elevation="4dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/tvHostName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="48dp" />

            <TextView
                android:id="@+id/tvHostAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvHostName"
                android:text="About"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="18sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/profilell"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_layout"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/residence_title"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tvDetails"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="Details" />

            <TextView
                android:id="@+id/tvAboutTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/residence_about_this_residence"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAboutText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/about"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvMapTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/profilell"
            android:textAppearance="@style/sectionHeader"
            android:text="@string/residence_where"
            android:textSize="17sp" />


        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="500dp"
            android:layout_below="@+id/tvMapTitle"
            android:id="@+id/mapResidence"
            tools:context=".MapsActivity"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            tools:layout="@layout/fragment_map" />

        <EditText
            android:id="@+id/etGuests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mapResidence"
            android:ems="10"
            android:hint="@string/residence_guests_number"
            android:inputType="number" />

        <TextView
            android:id="@+id/tvAvailabilityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/etGuests"
            android:textAppearance="@style/sectionHeader"
            android:text="@string/residence_availability"
            android:textSize="17sp" />

        <LinearLayout
            android:id="@+id/calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/tvAvailabilityTitle">
        </LinearLayout>
        </RelativeLayout>
    </ScrollView>
    <include layout="@layout/toolbar_residence" />
</RelativeLayout>